--- a/esp32/netmcu/components/app_misc/CMakeLists.txt
+++ b/esp32/netmcu/components/app_misc/CMakeLists.txt
@@ -4,7 +4,7 @@ idf_component_register(
     SRCS ${srcs}
     INCLUDE_DIRS "./include"
     REQUIRES app_config utils_debug utils_misc firmware_update utils_time
-    PRIV_REQUIRES app_net app_cli app_settings utils_debug key_value_store utils_misc stm32 storage txtio net_mqtt_app stm32_com net_http_server http_server_content
+    PRIV_REQUIRES app_net  app_settings utils_debug key_value_store utils_misc stm32 storage txtio net_mqtt_app  net_http_server http_server_content
                   nvs_flash driver
     EMBED_TXTFILES ./ca_cert.pem
 )
